Enable horizontal scrolling for border and printWrapper
Added horizontal scrolling to the .border and .printWrapper classes.

--- a/src/sass/dev.scss
+++ b/src/sass/dev.scss
@@ -24,6 +24,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow-x:scroll;
   .border{
     width: 90%;
     height: 92.5%;
@@ -393,6 +394,7 @@ span{
     width: 210mm;
     display: flex;
     flex-direction: column;
+    overflow-x:scroll;
 }
 .container,
 .secondContainer {
