--- a/src/sass/dev.scss
+++ b/src/sass/dev.scss
@@ -30,6 +30,7 @@ body {
     height: 92.5%;
     border: 2px solid #000;
     overflow: hidden;
+    overflow-x: hidden;
     .header{
         width: 100%;
         height: 25%;
@@ -104,7 +105,7 @@ body {
         justify-content: start;
         flex-direction: column;
         padding: 5px;   
-        margin-top: 45px;
+        margin-top: 15px;
     }
     .cen{
         width: 100%;
@@ -208,7 +209,7 @@ body {
             align-items: center;
             justify-content: space-between;
             .topSideP{
-                transform: translateY(-20px) translateX(-230px);
+                transform: translateY(15px) translateX(-210px); 
                 p{
                     color: #ccc;
                     font-family: 'poppins', sans-serif;
@@ -237,6 +238,16 @@ body {
             align-items: center;
             flex-direction: column;
             justify-content: start;
+            margin-bottom: 30px;
+            .inpGetImages{
+                height: 10px;
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: start;
+                flex-wrap: wrap;
+                flex-direction: row;
+            }
         }
         .righBotPage{
             width: 70%;
@@ -263,7 +274,8 @@ body {
     margin-top: 5px;
     flex-direction: column;
     position: absolute;
-    left: 75%;
+    top: 1200px;
+    left: 1200px;
     bottom: 0%;
     button{
         padding: 15px 10px;
@@ -394,7 +406,6 @@ span{
     width: 210mm;
     display: flex;
     flex-direction: column;
-    overflow-x:scroll;
 }
 .container,
 .secondContainer {
